# RustLab290

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  backend.rs  cell.rs  index.html  new.csv  report.tex  styles.css  tarpaulin-report.html  undo.csv
src/: app.rs  backend.rs  cell.rs  cli.rs  command_bar.rs  frontend.rs  grid.rs  gui.rs  lib.rs  main  main 2.rs  main.rs  main_gui.rs  mod.rs  parser.rs  structs.rs  tab_bar.rs  vec.rs
src/components/: command_bar.rs  formulabar.rs  mod.rs  spreadsheet_grid.rs  toolbar.rs
src/web/: formula_bar.rs  main.rs
src/web/components/: command_bar.rs  formula_bar.rs  grid.rs  tab_bar.rs
ui/: app-window.slint
