[package]
name = "RustLab290"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "spreadsheet"
path = "src/main.rs"

[features]
default = ["cli"]
cli = []
gui = [
"leptos",
"csv",
"console_log",
"wasm-bindgen",
"web-sys",
"js-sys",
"serde-wasm-bindgen",
"console_error_panic_hook",
"log",
]

[dependencies]
leptos = { version = "0.5", features = ["csr"], optional = true }
csv = { version = "1.3.0", optional = true }
console_log = { version = "1", optional = true}
wasm-bindgen = { version = "0.2.100", optional = true}
web-sys = { version = "0.3.69", features = [
    "Node",
    "EventTarget",
    "HtmlElement",
    "Element",
    "Document",
    "Window",
    "DomTokenList"
], optional = true } 
js-sys = { version = "0.3.69", optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }
log = { version = "0.4.27", optional = true }
