[package]
name = "RustLab290"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spreadsheet"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["csv",
    "log",
    "console_error_panic_hook",
    "console_log",
    "once_cell",]
ssr = [
    "csv",
    "log",
    "console_error_panic_hook",
    "console_log",
    "once_cell",
]

[dependencies]
csv = { version = "1.3", optional = true }
console_log = { version = "1.0", optional = true}
wasm-bindgen = { version = "0.2", optional = true}
web-sys = { version = "0.3", features = [
    "Node",
    "EventTarget",
    "HtmlElement",
    "Element",
    "Document",
    "Window",
    "DomTokenList"
], optional = true } 
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"       
serde-wasm-bindgen = { version = "0.6", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }
log = { version = "0.4", optional = true }
once_cell = { version = "1.21.3", optional = true }
actix-web = "4.10.2"
leptos_actix = "0.7.8"
tokio = "1.44.2"

[lib]
crate-type = ["cdylib"]
