[package]
name = "RustLab290"
version = "0.1.0"
edition = "2021"

[[bin]]
name="spreadsheet"
path="src/main.rs"


[features]
default = ["cli"]
cli = []
gui = [

"csv",
"console_log",
"wasm-bindgen",
"web-sys",
"js-sys",
"serde-wasm-bindgen",
"console_error_panic_hook",
"log",
"wasm-logger",
]
csv = ["dep:csv"]
web-sys = ["dep:web-sys"]

[dependencies]
wasm-logger = { version = "0.2", optional = true }
csv = { version = "1.3.0", optional = true }
console_log = { version = "1", optional = true}
wasm-bindgen = {version="0.2.100", optional=true}

gloo = { version = "0.11", features = ["file"] }


web-sys = { version = "0.3.69", features = ["Node", "FileReader", "Blob", "Url", "EventTarget", "HtmlElement", "HtmlInputElement", "BlobPropertyBag", "HtmlAnchorElement" ,"Event", "ProgressEvent","Element", "Document", "Window", "DomTokenList"], optional = true }
js-sys = { version = "0.3.69", optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }
log = { version = "0.4.27", optional = true }
yew = { version = "0.21", features = ["csr"] } # CSR = client-side rendering
